migration_log.txt
/Users/apple/Documents/code/next/memo/memolink-server/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/scripts/run-migration.ts(30,54): error TS2554: Expected 1-2 arguments, but got 4.

    at createTSError (/Users/apple/Documents/code/next/memo/memolink-server/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/apple/Documents/code/next/memo/memolink-server/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/apple/Documents/code/next/memo/memolink-server/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/apple/Documents/code/next/memo/memolink-server/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/apple/Documents/code/next/memo/memolink-server/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1706:10
    at Object.require.extensions.<computed> [as .ts] (/Users/apple/Documents/code/next/memo/memolink-server/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2554 ]
}
